# cpp

./: CMakeLists.txt  Logger.h  main.cpp
thirdLib/lib/: gtest_main.lib  spdlog.lib
